# mindflow

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  Dockerfile  MANIFEST.in  Makefile  README.md  config.json.template  docker-compose.yml  fib.py  main.py  requirements.txt  setup.py
mindflow/: .gitignore  Cargo.toml  __init__.py  cli.py  command_line_client.py  config.py  generate_index.py  input.py  main.py  prompt_generator.py  settings.py  state.py  test.ipynb  test.py
mindflow/.mindflow/: authentication.json  index.json
mindflow/app/: app.py
mindflow/cli/: cli_main.py  parser.py  run.py  util.py
mindflow/client/: gpt.py
mindflow/commands/: ask.py  auth.py  commit.py  config.py  delete.py  diff.py  generate.py  index.py  inspect.py  query.py  refresh.py
mindflow/core/: ask.py  chat.py  command_parse.py  commit.py  constants.py  convo.py  delete.py  diff.py  errors.py  execute.py  gen.py  index.py  inspect.py  login.py  pr.py  prompt_builders.py  prompts.py  query.py  settings.py  token_counting.py
mindflow/db/: config.py  controller.py  db.py  static_definition.py  utils.py
mindflow/index/: generate.py  model.py  query.py  resolve.py  search_tree.py
mindflow/models/: base_model.py  chat_gpt.py
mindflow/query/: mfq.py
mindflow/requests/: index_references.py  prompt.py  query.py  response.py  unindexed_reference.py
mindflow/resolve/: resolve.py  resolver_index.py
mindflow/resolve_handling/: generate_index.py  resolve.py
mindflow/resolving/: resolve.py
mindflow/src/: command_line_client.rs  main.rs
mindflow/utils/: args.py  (+20 more)
(+211 files in other folders)
